syntax = "proto3";

service Painter {
    rpc GetCanvas (CanvasRequest) returns (CanvasResponse) {}
    rpc Paint (PaintEvent) returns (Empty) {}
}

message Empty {}

message Position {
    required int32 x = 1;
    required int32 y = 2;
}

message PaintEvent {
    required Position pos = 1;
    required uint32 size = 3;
    required uint32 color = 4;
}

message StatusEvent {
    required uint32 users = 1;
}

message CanvasRequest {
    enum Encoding {
        PNG = 1;
        JPEG = 2;
        WEBP = 3;
    }
    required Position offset = 1;
    required uint32 width = 2;
    required uint32 height = 3;
    required Encoding encoding = 4;
}

message CanvasResponse {
    required bytes image = 1;
}
